<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_frame_root">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/header">

                <ImageView
                    android:id="@+id/fragment_cookbook_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_content_paste_black_24dp" />
                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="ingredients"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="ingredients"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/expandedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/recipe_details_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/header2">

                <ImageView
                    android:id="@+id/fragment_step_book_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_format_list_numbered_black_24dp" />
                <TextView
                    android:id="@+id/stepsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/steps"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="ingredients"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandedLayout2">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recipe_details_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
</FrameLayout>