<resources>
    <string name="app_name">Baking App</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="guess">Baking App</string>
    <string name="notification_text">Press to return to your recipe!</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="noRecipe">No Recipe</string>
    <string name="item_element_text">Brownies</string>
    <string name="recipe_details_title_bar">Recipe Details</string>
    <string name="recipe_step_title_bar">Recipe Details</string>


</resources>
