<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradiant_box">

    <Button
        android:id="@+id/play"
        android:layout_margin="10dip"
        android:background="@drawable/ic_play_circle_outline_black_24dp"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:id="@+id/step_button"
        android:adjustViewBounds="true"/>

</LinearLayout>